updating project structure

--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Behaviors\" />
+    <Folder Include="Converters\" />
+    <Folder Include="Controls\" />
+    <Folder Include="Styles\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
