--- a/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
+++ b/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
@@ -6,8 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Maps\" />
+    <Folder Include="Models\DTOs\" />
+    <Folder Include="Models\Maps\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Helpers\" />
+    <Folder Include="Structs\" />
   </ItemGroup>
 
 </Project>
