--- a/ProjectSpartan/ProjectSpartan.DataAccess/ProjectSpartan.DataAccess.csproj
+++ b/ProjectSpartan/ProjectSpartan.DataAccess/ProjectSpartan.DataAccess.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="4.4.3" />
+  </ItemGroup>
+
 </Project>
