--- a/ProjectSpartan/ProjectSpartan.Services/ProjectSpartan.Services.csproj
+++ b/ProjectSpartan/ProjectSpartan.Services/ProjectSpartan.Services.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="4.4.3" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
   </ItemGroup>
 
