--- a/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
+++ b/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Models\DTOs\" />
-    <Folder Include="Models\Maps\" />
-    <Folder Include="Enums\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Structs\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
