--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
@@ -35,4 +35,10 @@
     <Folder Include="Controls\" />
     <Folder Include="Styles\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\BaseView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
