--- a/ProjectSpartan/ProjectSpartan.API/ProjectSpartan.API.csproj
+++ b/ProjectSpartan/ProjectSpartan.API/ProjectSpartan.API.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Contracts\" />
-    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
