--- a/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
+++ b/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
