--- a/ProjectSpartan/ProjectSpartan.LocalStorage/ProjectSpartan.LocalStorage.csproj
+++ b/ProjectSpartan/ProjectSpartan.LocalStorage/ProjectSpartan.LocalStorage.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="SimpleInjector" Version="4.4.3" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
