--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
@@ -10,14 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fody" Version="4.0.2">
+    <PackageReference Include="Fody" Version="4.2.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
-    <PackageReference Include="SimpleInjector" Version="4.4.3" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.6.1" />
+    <PackageReference Include="SimpleInjector" Version="4.5.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +34,10 @@
     <Folder Include="Converters\" />
     <Folder Include="Controls\" />
     <Folder Include="Styles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ProjectSpartan.Framework\ProjectSpartan.Framework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
