enterprise navigation framed

--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan/ProjectSpartan.UI.csproj
@@ -41,6 +41,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\MainPageView.xaml.cs">
+      <DependentUpon>MainPageView.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\BaseView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
