--- a/ProjectSpartan/ProjectSpartan.Framework/ProjectSpartan.Framework.csproj
+++ b/ProjectSpartan/ProjectSpartan.Framework/ProjectSpartan.Framework.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.1" />
     <PackageReference Include="SimpleInjector" Version="4.5.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
   </ItemGroup>
 
 </Project>
