--- a/ProjectSpartan/ProjectSpartan/ProjectSpartan.iOS/ProjectSpartan.iOS.csproj
+++ b/ProjectSpartan/ProjectSpartan/ProjectSpartan.iOS/ProjectSpartan.iOS.csproj
@@ -149,9 +149,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Essentials">
-      <Version>1.0.1</Version>
+      <Version>1.1.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
