--- a/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
+++ b/ProjectSpartan/ProjectSpartan.Business/ProjectSpartan.Business.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="4.5.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
